kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: solar-system
  namespace: {NAMESPACE}
spec:
    rules:
    - host: a5702e5d1d8bb42a1babc8d410a9dd6f-857755553.us-east-1.elb.amazonaws.com
      http:
        paths:
        - backend:
            service:
              name: solar-system
              port:
                number: 3000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - a5702e5d1d8bb42a1babc8d410a9dd6f-857755553.us-east-1.elb.amazonaws.com
      secretName: ingress-local-tls
